# RWA

./: Cargo.toml  Makefile  README.md
.github/workflows/: build-rwa.yml  rwa.yml
src/: entrypoint.rs  lib.rs
src/instructions/: create_rwa.rs  creator_kyc.rs  mod.rs
src/instructions/admin/: mod.rs
src/states/: creator_kyc.rs
src/utils/: ata.rs  helper.rs
v1/: Cargo.toml
v1/src/: entrypoint.rs  errors.rs  lib.rs
v1/src/instructions/: create_rwa.rs  creator_kyc.rs  init_token_config.rs  mint_rwa.rs  mod.rs
v1/src/instructions/admin/: init_global_config.rs  mod.rs
v1/src/states/: creator_kyc.rs  global_config.rs  mod.rs  token_config.rs  token_metadata.rs  utils.rs
v1/src/utils/: ata.rs  helper.rs  mint.rs  mod.rs
v1/tests/: tests.rs
